--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="registerTextSize">40sp</dimen>
     <dimen name="registerInputTextMarginBottomSize">15dp</dimen>
     <dimen name="registerFormMargin">50dp</dimen>
+    <dimen name="buttonTextLoginHereSize">14sp</dimen>
 </resources>
