--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="@dimen/marginPodsjetnik">
 
@@ -30,5 +30,17 @@
             app:backgroundTint="@color/lightRed"
             android:layout_margin="16dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/listViewHeight"
+            android:layout_margin="@dimen/marginPodsjetnik"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/lvPodsjetnici"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
