changed new reminder activity to show fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="registerTextSize">40sp</dimen>
     <dimen name="registerInputTextMarginBottomSize">15dp</dimen>
     <dimen name="registerFormMargin">50dp</dimen>
+    <dimen name="registerFormMarginHorizontal">35dp</dimen>
     <dimen name="buttonTextLoginHereSize">14sp</dimen>
     <dimen name="marginPodsjetnik">20dp</dimen>
     <dimen name="textSizeForNewReminderLabels">22sp</dimen>
