--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="@dimen/registerFormMargin">
+        android:layout_marginHorizontal="@dimen/registerFormMarginHorizontal"
+        app:layout_constraintTop_toTopOf="parent">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,4 +107,4 @@
             android:text="@string/login_here"
             style="?android:attr/borderlessButtonStyle" />
     </LinearLayout >
-</LinearLayout>
+</ScrollView>
