implemented saving new vitals into list of vitals for pacijent, fixed double saving on backend side, imeplemted display list of vitals

--- a/app/src/main/res/layout/activity_vitals.xml
+++ b/app/src/main/res/layout/activity_vitals.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ReminderActivity">
+    tools:context=".VitalsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/podsjetnik"
+            android:text="@string/vitali"
             android:textSize="@dimen/registerTextSize"
             android:textStyle="bold"
             android:layout_marginBottom="@dimen/registerInputTextMarginBottomSize"/>
@@ -37,7 +37,7 @@
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/lvPodsjetnici"
+                android:id="@+id/lvVitali"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
