--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,8 +9,10 @@
     <dimen name="marginBottomDatumUzimanjaLijeka">20dp</dimen>
     <dimen name="marginEndNacinPrimjene">10dp</dimen>
     <dimen name="marginRightLeftAddNewReminderButton">40dp</dimen>
-    <dimen name="listViewHeight">500dp</dimen>
+    <dimen name="listViewHeight">480dp</dimen>
     <dimen name="textsizeItemListDrugiRed">17sp</dimen>
     <dimen name="marginBTLforLLforItemList">20dp</dimen>
     <dimen name="textsizeItemListPrviRed">30sp</dimen>
+    <dimen name="navigation_height">50dp</dimen>
+    <dimen name="textsizeItemListVitaliPrviRed">25sp</dimen>
 </resources>
