--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,9 @@
     <dimen name="backBtn_marginTop">20dp</dimen>
     <dimen name="doseMetricSpinner_width">100dp</dimen>
     <dimen name="doseMetricSpinner_height">40dp</dimen>
+    <dimen name="btnIntervalContainer_paddingHorizontal">40dp</dimen>
+    <dimen name="btnIntervalContainer_marginTop">40dp</dimen>
+    <dimen name="dailyBtn_paddingHorizontal">40dp</dimen>
+    <dimen name="dailyBtn_marginTop">40dp</dimen>
+    <dimen name="mainReminderQuestionTextSize">30sp</dimen>
 </resources>
