--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="marginBottomDatumUzimanjaLijeka">20dp</dimen>
     <dimen name="marginEndNacinPrimjene">10dp</dimen>
     <dimen name="marginRightLeftAddNewReminderButton">40dp</dimen>
-    <dimen name="listViewHeight">500dp</dimen>
+    <dimen name="listViewHeight">400dp</dimen>
     <dimen name="textsizeItemListDrugiRed">17sp</dimen>
     <dimen name="marginBTLforLLforItemList">20dp</dimen>
     <dimen name="textsizeItemListPrviRed">30sp</dimen>
@@ -27,4 +27,7 @@
     <dimen name="dailyBtn_paddingHorizontal">40dp</dimen>
     <dimen name="dailyBtn_marginTop">40dp</dimen>
     <dimen name="mainReminderQuestionTextSize">30sp</dimen>
+    <dimen name="textsizeItemListVitaliPrviRed">20dp</dimen>
+    <dimen name="navigation_height">50dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
