--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,12 @@
 <!--            android:id="@+id/action_FirstFragment_to_SecondFragment"-->
 <!--            app:destination="@id/SecondFragment" />-->
     </fragment>
+    <fragment
+        android:id="@+id/ProfileFragment"
+        android:name="hr.medick.fragments.ProfileFragment"
+        android:label="@string/profil"
+        tools:layout="@layout/fragment_profile">
+    </fragment>
 
     <fragment
         android:id="@+id/VitalsFragment"
