--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/vitaliList"
         android:icon="@drawable/vitals"
         android:title="Vitali" />
+    <item
+        android:id="@+id/userProfile"
+        android:icon="@drawable/user_icon"
+        android:title="Korisnički račun" />
 </menu>
