--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -46,4 +46,13 @@
         </LinearLayout>
     </LinearLayout>
 
+
+<!--    <Button-->
+<!--        android:id="@+id/logoutBtn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:paddingHorizontal="10dp"-->
+<!--        android:text="Logout" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
